Users in activity

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605465528" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1605465528"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605465528"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605470240" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1605470240"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605470240"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1605465528"></script>
-      <script src="template.js?v=1605465528"></script>
-      <script src="dom.js?v=1605465528"></script>
-      <script src="api.js?v=1605465528"></script>
-      <script src="index.js?v=1605465528"></script>
-      <script src="sbs2-markup/highlight.js?v=1605465528"></script>
-      <script src="sbs2-markup/parse.js?v=1605465528"></script>
-      <script src="sbs2-markup/render.js?v=1605465528"></script>
+      <script src="libbo.js?v=1605470240"></script>
+      <script src="template.js?v=1605470240"></script>
+      <script src="dom.js?v=1605470240"></script>
+      <script src="api.js?v=1605470240"></script>
+      <script src="index.js?v=1605470240"></script>
+      <script src="sbs2-markup/highlight.js?v=1605470240"></script>
+      <script src="sbs2-markup/parse.js?v=1605470240"></script>
+      <script src="sbs2-markup/render.js?v=1605470240"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1605465528" />
+      <link rel="stylesheet" href="index.css?v=1605470240" />
       <script>
 function loginEmailSwitch(element)
 {
@@ -321,7 +321,7 @@ function leftpaneclick(event)
                 uk-switcher="swiping: false;">
       <!-- Shifted over for convenience, want to fit on one line please -->
       <div uk-tooltip="Navigate"><a href="" class="uk-display-block" 
-            uk-icon="icon: home; ratio: 2"></a></div>
+            uk-icon="icon: search; ratio: 2"></a></div>
       <div data-loginonly uk-tooltip="Recent Activity"><a href="" class="uk-display-block" 
             uk-icon="icon: history; ratio: 2"></a></div>
       <div data-loginonly class="uk-inline" uk-tooltip="Notifications">
@@ -333,7 +333,7 @@ function leftpaneclick(event)
             uk-icon="icon: server; ratio: 2"></a></div>
       <div data-loginonly class="uk-inline" uk-tooltip="User">
          <a href="" class="uk-display-block"><img id="navuseravatar" 
-            width="40" height="40" class="" uk-img></img></a>
+            width="40" height="40" class=""></img></a>
       </div>
       <div data-logoutonly uk-tooltip="Login"><a href="" class="uk-display-block"
             uk-icon="icon: user; ratio: 2"></a></div>
@@ -1106,7 +1106,7 @@ function leftpaneclick(event)
       onclick="event.preventDefault();var p=this.parentNode;p.parentNode.removeChild(p);"></a>
          </div>
          <div id="slideshow" uk-slideshow="animation: slide; ratio: 16:9;
-                  autoplay: true; autoplay-interval: 6000; pause-on-hover: true">
+                  autoplay: false; autoplay-interval: 6000; pause-on-hover: true">
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
                <ul data-slideshowitems class="uk-slideshow-items">
                </ul>
