--- a/index.html
+++ b/index.html
@@ -817,6 +817,110 @@ function leftpaneclick(event)
             <time t-date=".textContent" class="uk-text-meta"></time>
          </div>
 
+         <ul id="pagecontrols" t-page=".internal(pagecontrols)" t-pinned t-permissions
+            class="pagecontrols uk-flex-none uk-list uk-list-collapse uk-margin-remove hidelogout" data-loginonly>
+            <li>
+               <a href="#" t-watched uk-icon="bell"></a>
+            </li>
+            <li>
+               <a href="#" uk-icon="cog"></a>
+               <div uk-dropdown="pos: bottom-right; mode: click" class="uk-dropdown"> 
+                  <ul class="uk-list uk-margin-remove-bottom">
+                     <!-- Unfortunately, UIkit doesn't handle hidden first list items well -->
+                     <li>
+                        <a href="#" data-viewraw>Raw Data</a></li>
+                     <li data-updateonly>
+                        <a t-editlink=".spa()">Edit Page</a></li>
+                     <li data-deleteonly>
+                        <a href="#" t-deleteaction=".onclick">Delete Page</a></li>
+                     <li data-superonly data-unpinnedonly>
+                        <a t-pinaction=".onclick" href="#">Pin Page</a></li>
+                     <li data-superonly data-pinnedonly>
+                        <a t-unpinaction=".onclick" href="#">Unpin Page</a></li>
+                  </ul>
+               </div>
+            </li>
+         </ul>
+
+         <div id="pagetitle" class="pagetitle">
+            <h1 class="uk-width-expand uk-margin-small-right" t-title=".textContent"></h1>
+         </div>
+
+         <div id="sbhardware" t-page=".internal(sbhardware)" class="uk-flex-none texticon">
+            <img t-icon="uk-svg">
+            <span t-text=".textContent" class="programsystem"></span>
+         </div>
+
+         <div id="slideshow" t-pages=".internal(slideshowpages)" uk-slideshow="animation: slide; ratio: 16:9;
+                  autoplay: true; autoplay-interval: 6000; pause-on-hover: true">
+            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+               <ul t-images=".internal(slideshowimages)" class="uk-slideshow-items"></ul>
+               <a class="uk-position-center-left uk-position-small uk-hidden-hover" 
+                  href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+               <a class="uk-position-center-right uk-position-small uk-hidden-hover" 
+                  href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+            </div>
+            <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
+         </div>
+
+         <img id="slideshowimage" t-image=".src" uk-cover class="slideshowimage">
+
+         <li id="slideshowitem"><div tlink="slideshowimage" thoist></div></li>
+
+         <li id="annotatedslideshowitem">
+            <a t-link=".spa()" class="uk-width-expand uk-height-1-1 uk-display-block">
+               <div tlink="slideshowimage" thoist></div>
+            </a>
+            <div class="uk-overlay-primary uk-position-bottom uk-text-center 
+                 uk-text-large uk-text-truncate slideshowtext" 
+               t-title=".internal(show,textContent)" hidden>
+               <!--<span t-title=".textContent" class="uk-margin-remove
+               uk-text-truncate uk-text-large slideshowtext
+               uk-display-block"></span>-->
+            </div>
+            <!--<div class="uk-overlay-primary uk-position-bottom uk-text-center" hidden>
+               <p data-tagline=".textContent" class="uk-margin-remove
+               uk-text-truncate slideshowtext"></p>
+            </div>-->
+         </li>
+
+         <div id="routepage" t-pinned t-permissions
+              class="uk-container uk-margin-top uk-margin-bottom contentpage">
+            <div thoist tlink="pagetitle"></div>
+            <div tlink="pagecontrols"></div>
+            <div data-programcontainer hidden>
+               <div tlink="slideshow" hidden></div>
+               <div class="uk-flex uk-flex-middle uk-margin-small-left uk-margin-small-right">
+                  <div tlink="sbhardware"></div>
+                  <span class="uk-width-expand"></span>
+                  <div class="uk-flex-none texticon">
+                     <img data-src="key2.svg" uk-svg="ratio: 1.2">
+                     <span class="uk-text-large key" t-key=".textContent"></span>
+                  </div>
+               </div>
+            </div>
+            <article t-content=".render" t-format
+               class="pageblock uk-text-break content uk-margin-remove-top"></article>
+         </div>
+
+         <div id="routehome" class="uk-container uk-margin-top uk-margin-bottom">
+            <h1 class="pagetitle">SmileBASIC Source</h1>
+            <div class="pageblock">
+               <p>A community for talking about SmileBASIC, a program that lets you create
+               BASIC programs on your Nintendo 3DS, Wii U, and Switch! Open the
+               sidebar or <a href="?p=category-0">START HERE</a> to browse!
+               We also have an <a href="/12">alternate frontend</a> developed by local user 12, try it out!</p>
+               <p>SmileBASIC Source changed websites and databases. The
+               original is now hosted at <a href="https://old.smilebasicsource.com">
+               old.smilebasicsource.com</a></p>
+               <div data-slideshowcontainer>
+                  <div tlink="slideshow" thoist></div>
+               </div>
+            </div>
+            <!-- TODO: Make activity part of template2 -->
+            <div class="" data-homehistory></div>
+         </div>
+
       </template>
       <template id="templates" style="display: none">
          <div id="error" class="uk-alert-danger uk-text-break" uk-alert>
@@ -1064,39 +1168,6 @@ function leftpaneclick(event)
             class="uk-margin-small-bottom">
          </div>
          <a id="addeveryone" href="#">Add global permission</a>
-         <ul id="pagecontrols" class="pagecontrols uk-flex-none uk-list uk-list-collapse uk-margin-remove"
-            data-loginonly>
-            <li><a href="#" data-watched uk-icon="bell"></a></li>
-            <li>
-               <a href="#" uk-icon="cog"></a>
-               <div uk-dropdown="pos: bottom-right; mode: click" class="uk-dropdown"> 
-                  <ul class="uk-list uk-margin-remove-bottom">
-                     <!-- Unfortunately, UIkit doesn't handle hidden first list items well -->
-                     <li><a href="#" data-viewraw>Raw Data</a></li>
-                     <li data-updateonly><a data-editlink="href" data-spa>Edit Page</a></li>
-                     <li data-deleteonly><a href="#" data-deleteaction=".simpleAction">Delete Page</a></li>
-                     <li data-superonly data-unpinnedonly><a href="#" data-pinaction=".simpleAction">Pin Page</a></li>
-                     <li data-superonly data-pinnedonly><a href="#" data-unpinaction=".simpleAction">Unpin Page</a></li>
-                  </ul>
-               </div>
-            </li>
-         </ul>
-         <li id="annotatedslideshowitem">
-            <a data-link="href" class="uk-width-expand uk-height-1-1 uk-display-block" data-spa>
-               <img data-src=".src" uk-cover class="slideshowimage">
-            </a>
-            <div class="uk-overlay-primary uk-position-bottom uk-text-center">
-               <span data-title=".textContent" class="uk-margin-remove
-               uk-text-truncate uk-text-large slideshowtext uk-display-block"></span>
-            </div>
-            <div class="uk-overlay-primary uk-position-bottom uk-text-center" hidden>
-               <p data-tagline=".textContent" class="uk-margin-remove
-               uk-text-truncate slideshowtext"></p>
-            </div>
-         </li>
-         <li id="slideshowitem">
-            <img data-src=".src" uk-cover class="slideshowimage">
-         </li>
          <div id="contentimage" class="uk-flex
             uk-flex-middle"><img data-nouikit data-contentimageimage tabindex="2" data-src="src"></div>
          <div id="collectionitem" class="uk-flex uk-flex-middle uk-card uk-card-default"
@@ -1104,18 +1175,6 @@ function leftpaneclick(event)
             <div data-item class="uk-width-expand"></div>
             <a href="#" uk-icon="close" class="uk-text-danger uk-flex-none"
       onclick="event.preventDefault();var p=this.parentNode;p.parentNode.removeChild(p);"></a>
-         </div>
-         <div id="slideshow" uk-slideshow="animation: slide; ratio: 16:9;
-                  autoplay: true; autoplay-interval: 6000; pause-on-hover: true">
-            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-               <ul data-slideshowitems class="uk-slideshow-items">
-               </ul>
-               <a class="uk-position-center-left uk-position-small uk-hidden-hover" 
-                  href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-               <a class="uk-position-center-right uk-position-small uk-hidden-hover" 
-                  href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-            </div>
-            <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
          </div>
          <table>
          <tr id="banhistoryitem" class="lightstriped">
@@ -1133,27 +1192,6 @@ function leftpaneclick(event)
             </ul>
          </li>
          <!-- LOC:ROUTES -->
-         <div id="routehome" class="uk-container uk-margin-top uk-margin-bottom">
-            <h1 class="pagetitle">SmileBASIC Source</h1>
-            <div class="pageblock">
-               <p>A community for talking about SmileBASIC, a program that lets you create
-               BASIC programs on your Nintendo 3DS, Wii U, and Switch! Open the
-               sidebar or <a href="?p=category-0">START HERE</a> to browse!
-               We also have an <a href="/12">alternate frontend</a> developed by local user 12, try it out!</p>
-               <p>SmileBASIC Source changed websites and databases. The
-               original is now hosted at <a href="https://old.smilebasicsource.com">
-               old.smilebasicsource.com</a></p>
-               <div data-slideshowcontainer>
-                  <div data-tmpl="slideshow"></div>
-               </div>
-            </div>
-            <h3>
-               <!--<a href="?p=category-0" data-spa>Website Tree</a>-->
-               <!--<a href="/12" class="uk-text-small uk-align-right">Alternate frontend</a>-->
-            </h3>
-            <div class="" data-homehistory></div>
-            <!--<a href="?p=test" data-spa>Test area</a>-->
-         </div>
          <div id="routeerror" class="uk-container uk-margin-top uk-margin-bottom">
             <h1>ERROR - <span data-title=".textContent"></span></h1>
             <p data-message=".textContent" class="uk-text-danger"></p>
@@ -1168,32 +1206,6 @@ function leftpaneclick(event)
       <button onclick="notifyError('Oh wow, look at that!')">Notify err</button>
       <button
          onclick="notifyError('jkfdls;jkfdsjfdklsfjdkfeirjdkfdkskcmdsfjdkfjdksfjdaklsfjdfdfdklfjdskfdkslfjdskfkdsjfdklsfjdkslfjdkslfjdkfjdskmksdlj')">Notify err</button>
-         </div>
-         <div id="routepage" class="uk-container uk-margin-top uk-margin-bottom contentpage"
-             data-pinned data-permissions=".leftPanePerms">
-            <!-- WARN: DUPLICATED IN ROUTEUSER -->
-            <div class="pagetitle uk-flex">
-               <h1 class="uk-width-expand uk-margin-small-right" data-title=".textContent"></h1>
-               <div data-tmpl="pagecontrols"></div>
-            </div>
-            <div data-programcontainer hidden>
-               <div data-tmpl="slideshow" hidden>
-               </div>
-               <div class="uk-flex uk-flex-middle uk-margin-small-left 
-                  uk-margin-small-right">
-                  <div data-system=".systemToIcon" class="uk-flex-none texticon">
-                     <img data-icon uk-svg="ratio: 1.0">
-                     <span data-text class="programsystem"></span>
-                  </div>
-                  <span class="uk-width-expand"></span>
-                  <div class="uk-flex-none texticon">
-                     <img data-src="key2.svg" uk-svg="ratio: 1.2">
-                     <span class="uk-text-large key" data-key=".textContent"></span>
-                  </div>
-               </div>
-            </div>
-            <article data-content=".renderContent" data-format="data-fmt" 
-               class="pageblock uk-text-break content uk-margin-remove-top"></article>
          </div>
          <div id="routeuser" class="uk-container uk-margin-top uk-margin-bottom contentpage"
               data-pinned data-permissions=".leftPanePerms">
