--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605581031" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1605581031"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605581031"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605582152" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1605582152"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605582152"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1605581031"></script>
-      <script src="template.js?v=1605581031"></script>
-      <script src="dom.js?v=1605581031"></script>
-      <script src="api.js?v=1605581031"></script>
-      <script src="index.js?v=1605581031"></script>
-      <script src="sbs2-markup/highlight.js?v=1605581031"></script>
-      <script src="sbs2-markup/parse.js?v=1605581031"></script>
-      <script src="sbs2-markup/render.js?v=1605581031"></script>
+      <script src="libbo.js?v=1605582152"></script>
+      <script src="templates.js?v=1605582152"></script>
+      <script src="dom.js?v=1605582152"></script>
+      <script src="api.js?v=1605582152"></script>
+      <script src="index.js?v=1605582152"></script>
+      <script src="sbs2-markup/highlight.js?v=1605582152"></script>
+      <script src="sbs2-markup/parse.js?v=1605582152"></script>
+      <script src="sbs2-markup/render.js?v=1605582152"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1605581031" />
+      <link rel="stylesheet" href="index.css?v=1605582152" />
       <script>
 function loginEmailSwitch(element)
 {
@@ -767,7 +767,7 @@ function leftpaneclick(event)
          </div>
       </div>
       <!-- LOC:TEMPLATES -->
-      <template id="templates2">
+      <template id="templates">
 
          <li id="log" class="uk-flex uk-text-break">
             <span t-message=".textContent" t-level="data-loglevel" class="uk-width-expand logmessage"></span>
@@ -851,7 +851,8 @@ function leftpaneclick(event)
             <span t-text=".textContent" class="programsystem"></span>
          </div>
 
-         <div id="slideshow" t-pages=".internal(slideshowpages)" uk-slideshow="animation: slide; ratio: 16:9;
+         <div id="slideshow" t-page=".internal(slideshowpage)" 
+            t-pages=".internal(slideshowpages)" uk-slideshow="animation: slide; ratio: 16:9;
                   autoplay: true; autoplay-interval: 6000; pause-on-hover: true">
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
                <ul t-images=".internal(slideshowimages)" class="uk-slideshow-items"></ul>
@@ -915,7 +916,7 @@ function leftpaneclick(event)
          </div>
 
       </template>
-      <template id="templates" style="display: none">
+      <template id="templates_old"> <!-- style="display: none">-->
          <div id="error" class="uk-alert-danger uk-text-break" uk-alert>
             <a class="uk-alert-close" uk-close></a>
             <p data-message=".textContent"></p>
