--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605591575" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1605591575"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605591575"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605597114" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1605597114"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605597114"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1605591575"></script>
-      <script src="templates.js?v=1605591575"></script>
-      <script src="dom.js?v=1605591575"></script>
-      <script src="api.js?v=1605591575"></script>
-      <script src="index.js?v=1605591575"></script>
-      <script src="sbs2-markup/highlight.js?v=1605591575"></script>
-      <script src="sbs2-markup/parse.js?v=1605591575"></script>
-      <script src="sbs2-markup/render.js?v=1605591575"></script>
+      <script src="libbo.js?v=1605597114"></script>
+      <script src="templates.js?v=1605597114"></script>
+      <script src="dom.js?v=1605597114"></script>
+      <script src="api.js?v=1605597114"></script>
+      <script src="index.js?v=1605597114"></script>
+      <script src="sbs2-markup/highlight.js?v=1605597114"></script>
+      <script src="sbs2-markup/parse.js?v=1605597114"></script>
+      <script src="sbs2-markup/render.js?v=1605597114"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1605591575" />
+      <link rel="stylesheet" href="index.css?v=1605597114" />
       <script>
 function loginEmailSwitch(element)
 {
@@ -849,14 +849,32 @@ function leftpaneclick(event)
             <span t-text=".textContent" class="programsystem"></span>
          </div>
 
+         <svg id="piechart" width="20" height="20" viewbox="0 0 20 20" data-mysvg
+            xmlns="http://www.w3.org/2000/svg" t-dataset=".internal(piechart)">
+           <g data-pie></g>
+           <circle cx="10" cy="10" r="9.5" fill="none" stroke="#000" stroke-width="1" />
+           <path fill="none" stroke="#000" stroke-width="1.03" d="
+           M10 7.6C10
+           7.6 9.24 6.8 8.296 6.8 7.352 6.8 6.4 7.42 6.4 8.692 6.4 9.536 7.068
+           10.176 7.068 10.176L10 13.2 12.932 10.176C12.932 10.176 13.6 9.536
+           13.6 8.692 13.6 7.42 12.648 6.8 11.704 6.8 10.76 6.8 10 7.6 10
+           7.6L10 7.6Z
+           "></path>
+           <!--M10,4 C10,4
+              8.1,2 5.74,2 C3.38,2 1,3.55 1,6.73 C1,8.84 2.67,10.44 2.67,10.44
+              L10,18 L17.33,10.44 C17.33,10.44 19,8.84 19,6.73 C19,3.55 16.62,2
+              14.26,2 C11.9,2 10,4 10,4 L10,4 Z"></path>-->
+         </svg>
+
          <!-- Page controls are SO complex that I want them to be able to
             function even outside any context, so they get their own page
             assignment and pinned/permissions fields, etc -->
          <div id="pagecontrols" t-page=".internal(pagecontrols)" t-pinned t-permissions
             class="pagecontrols uk-flex-none uk-flex hidelogout" data-loginonly>
             <div>
-               <a href="#" class="pagecontrol" t-votes 
-                  uk-icon="google"></a>
+               <a href="#" class="pagecontrol" t-votes>
+                  <div tlink="piechart" thoist></div>
+               </a>
                <div uk-dropdown="pos: bottom-right; mode: click" class="uk-dropdown"> 
                   <span></span>
                   <span></span>
