Watching works again

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605602508" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1605602508"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605602508"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605604070" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1605604070"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605604070"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1605602508"></script>
-      <script src="templates.js?v=1605602508"></script>
-      <script src="dom.js?v=1605602508"></script>
-      <script src="api.js?v=1605602508"></script>
-      <script src="index.js?v=1605602508"></script>
-      <script src="sbs2-markup/highlight.js?v=1605602508"></script>
-      <script src="sbs2-markup/parse.js?v=1605602508"></script>
-      <script src="sbs2-markup/render.js?v=1605602508"></script>
+      <script src="libbo.js?v=1605604070"></script>
+      <script src="templates.js?v=1605604070"></script>
+      <script src="dom.js?v=1605604070"></script>
+      <script src="api.js?v=1605604070"></script>
+      <script src="index.js?v=1605604070"></script>
+      <script src="sbs2-markup/highlight.js?v=1605604070"></script>
+      <script src="sbs2-markup/parse.js?v=1605604070"></script>
+      <script src="sbs2-markup/render.js?v=1605604070"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1605602508" />
+      <link rel="stylesheet" href="index.css?v=1605604070" />
       <script>
 function loginEmailSwitch(element)
 {
@@ -884,7 +884,7 @@ function leftpaneclick(event)
             </div>
             <div>
                <a href="#" class="pagecontrol" t-watched 
-                  t-togglewatch=".onclick" uk-icon="bell"></a>
+                  t-watchfunc=".internal(pagecontrolwatch)" uk-icon="bell"></a>
                <div class="uk-text-meta uk-text-center" t-watchcount=".textContent">0</div>
             </div>
             <div>
