Userpages working? Not very confident

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605652454" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1605652454"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605652454"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1605657173" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1605657173"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1605657173"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1605652454"></script>
-      <script src="templates.js?v=1605652454"></script>
-      <script src="dom.js?v=1605652454"></script>
-      <script src="api.js?v=1605652454"></script>
-      <script src="index.js?v=1605652454"></script>
-      <script src="sbs2-markup/highlight.js?v=1605652454"></script>
-      <script src="sbs2-markup/parse.js?v=1605652454"></script>
-      <script src="sbs2-markup/render.js?v=1605652454"></script>
+      <script src="libbo.js?v=1605657173"></script>
+      <script src="templates.js?v=1605657173"></script>
+      <script src="dom.js?v=1605657173"></script>
+      <script src="api.js?v=1605657173"></script>
+      <script src="index.js?v=1605657173"></script>
+      <script src="sbs2-markup/highlight.js?v=1605657173"></script>
+      <script src="sbs2-markup/parse.js?v=1605657173"></script>
+      <script src="sbs2-markup/render.js?v=1605657173"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1605652454" />
+      <link rel="stylesheet" href="index.css?v=1605657173" />
       <script>
 function loginEmailSwitch(element)
 {
@@ -935,7 +935,7 @@ function leftpaneclick(event)
                <div class="uk-flex-inline">
                   <h1 t-title=".textContent" t-banned
                       class="uk-width-expand uk-margin-small-right"></h1>
-                  <div tlink="pagecontrols" hidden></div>
+                  <div tlink="pagecontrols"></div>
                </div>
                <img t-avatar=".internal(icon)" width=100 class="uk-align-right avatar">
                <div data-nopage hidden>
